toolchains/typescript/tests/snapshots/tier1_sync_test__typescript_toolchain_tier1__sync_project_references__adds_deps_as_refs.snap
---
source: toolchains/typescript/tests/tier1_sync_test.rs
expression: "fs::read_file(sandbox.path().join(\"no-refs/tsconfig.json\")).unwrap()"
---
{
  "references": [
    {
      "path": "../a"
    },
    {
      "path": "../b"
    },
    {
      "path": "../c"
    }
  ]
}
