toolchains/typescript/tests/snapshots/tier1_sync_test__typescript_toolchain_tier1__sync_project_references__clears_refs_if_no_longer_needed.snap
---
source: toolchains/typescript/tests/tier1_sync_test.rs
assertion_line: 310
expression: "fs::read_file(sandbox.path().join(\"only-stale/tsconfig.json\")).unwrap()"
---
{
  "references": []
}
