toolchains/typescript/tests/snapshots/tier1_sync_test__typescript_toolchain_tier1__sync_project_references__keeps_stale_refs_if_prune_disabled.snap
---
source: toolchains/typescript/tests/tier1_sync_test.rs
assertion_line: 259
expression: "fs::read_file(sandbox.path().join(\"extra-refs/tsconfig.json\")).unwrap()"
---
{
  "references": [
    {
      "path": "../a"
    },
    {
      "path": "../b"
    },
    {
      "path": "../c"
    },
    {
      "path": "../stale"
    }
  ]
}
