toolchains/typescript/tests/snapshots/tier1_sync_test__typescript_toolchain_tier1__sync_project_references__preserves_shared_types_ref_when_pruning.snap
---
source: toolchains/typescript/tests/tier1_sync_test.rs
assertion_line: 390
expression: "fs::read_file(sandbox.path().join(\"extra-refs/tsconfig.json\")).unwrap()"
---
{
  "references": [
    {
      "path": "../a"
    },
    {
      "path": "../b"
    },
    {
      "path": "../c"
    },
    {
      "path": "../types"
    }
  ],
  "include": [
    "../types/**/*"
  ]
}
