toolchains/typescript/tests/snapshots/tier1_sync_test__typescript_toolchain_tier1__sync_project_references__prunes_stale_refs_if_enabled.snap
---
source: toolchains/typescript/tests/tier1_sync_test.rs
assertion_line: 285
expression: "fs::read_file(sandbox.path().join(\"extra-refs/tsconfig.json\")).unwrap()"
---
{
  "references": [
    {
      "path": "../a"
    },
    {
      "path": "../b"
    },
    {
      "path": "../c"
    }
  ]
}
