toolchains/typescript/tests/snapshots/tier1_sync_test__typescript_toolchain_tier1__sync_project_references__prunes_stale_refs_with_custom_config_name.snap
---
source: toolchains/typescript/tests/tier1_sync_test.rs
assertion_line: 360
expression: "fs::read_file(sandbox.path().join(\"extra-refs/tsconfig.ref.json\")).unwrap()"
---
{
  "references": [
    {
      "path": "../a/tsconfig.ref.json"
    },
    {
      "path": "../b/tsconfig.ref.json"
    },
    {
      "path": "../c/tsconfig.ref.json"
    }
  ]
}
